Be sure the NavBar is always in the correct position.
When I would restart the server, the navbar would
be no longer be at the top of the page and at 100%
width.

I fixed it to the top of the page and at 100% width.

I also added a 64px margin to the top of the application
via globals.css to account for the fixed navbar.
So no content will be hidden underneath the navbar

--- a/app/components/appbar.css
+++ b/app/components/appbar.css
@@ -2,7 +2,12 @@
   background-color: white;
   margin-bottom: 16px;
   box-shadow: 0 0 20px 10px rgba(9, 159, 255, 0.5);
-  z-index: -1;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 }
 
 #toolbar {
