--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,5 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  margin-top: 64px;
 }
